kube/ckad/service/sample-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: nginx-service
spec:
   type: ClusterIP
   selector:
      app: nginx-service
   ports:
   -  port: 80
      targetPort: 80
