kube/ckad/service/payment-api-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: payment-api-allow
spec:
   podSelector:
      matchLabels:
         app: payment-processor
         role: api
   ingress:
   -  from:
      -  podSelector:
            matchLabels:
               app: Coffeeshop
